[gd_scene load_steps=13 format=3 uid="uid://di06fjy0wpbgy"]

[ext_resource type="Script" uid="uid://d02gocsi44neu" path="res://Scenes/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://bktoshafpnymi" path="res://Assets/MushStand.png" id="2_vgqql"]
[ext_resource type="Texture2D" uid="uid://brxv7248w10qx" path="res://Assets/MushBounce.png" id="3_fkybt"]
[ext_resource type="Texture2D" uid="uid://b4akqd7w1ws7m" path="res://Assets/Mush.png" id="4_x3wgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_vgqql")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_fkybt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_fkybt")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("4_x3wgy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("4_x3wgy")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_vgqql")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ukyrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": true,
"name": &"Run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"Stand",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgqql"]
size = Vector2(28, 23)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -0.5)
sprite_frames = SubResource("SpriteFrames_ukyrk")
animation = &"Run"
frame_progress = 0.965054

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_vgqql")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="canDash_Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="canDash_Timer" to="." method="_on_can_dash_timer_timeout"]
